x2goclient (3.99.2.1-0~x2go1) UNRELEASED; urgency=low

  * Continue development...

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 04 Apr 2012 11:55:57 +0200

x2goclient (3.99.2.0-0~x2go1) unstable; urgency=low

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.2.0):
    - Support for "published applications".
      Sponsored by Stefan Baur (http://www.baur-itcs.de).
    - Command line argument "--session-conf=<file>": path to alternative
      session config.
    - Fixed bug "light font colour on light background" by dark colour schema.
    - Make X2Go system tray icon not transparent.
    - Replace text on buttons "Application", "Share folder", "Suspend",
      "Terminate" with icons to fit in dialog window.
    - Support for SVG icons for published applications
    - Set "nofocus" policy for tool buttons.
    - Some improvements when using pgp card.
    - Setting TCP_NODELAY for sockets on reverse tunnel and ssh session.
    - Support for category X2Go-Top to display published applications on top
      of application menu.
    - Exporting PULSE_CLIENTCONFIG when running published applications.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 04 Apr 2012 11:52:07 +0200

x2goclient (3.99.1.1-0~x2go1) unstable; urgency=low

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.1.1):
    - not including <netinet/in.h> on Q_OS_WIN platform.
    - not updating Xinerama configuration in "fullscreen" mode.
    - command line argument "--xinerama": use Xinerama by default.
    - improved support for use in TCE
      command line argument --thinclient - running without window manager
      command line argument --haltbt - button to shutdown the thin client
    - Fix comments in copyright headers.

  [ Mike Gabriel ]
  * New upstream version (3.99.1.1):
    - Update copyright year in about window. Including all translations.
    - Power button icon: make inner part transparent. Needed for people
      with a dark GUI theme.